--- a/style.css
+++ b/style.css
@@ -1,49 +1,49 @@
- a {
-
-    color: Azure;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 4px 4px 0 0;
+body {
+background-color: black;
+color: white;
+font-family: 'Architects Daughter', serif;
+font-size: 48px;
+text-shadow: 4px 4px 4px #aaa;
 }
 
-a:hover {
-    color: #99CCFF;
+.navbar{
+  display: inline;
+  padding: 0;
+  margin: 0;
+  position: absolute;
 }
 
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+a:link{
+  color: black;
+  text-decoration: none;
+  font-size: 2.5em;
 }
 
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+.navbar li{
+  display:block;
+  float: left;
+  position: relative;
+  width: 7.8em;
+  text-align: center;
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
+.dropdown-menu{
+  list-style: none;
+  background-color: black;
+  opacity: .8
+  border: 2px solid white;
+  text-align: center;
+  padding: 1em;
+  position: absolute;
+  height: auto;
+  width: 150px;
+  font-family: 'Rock Salt';
+  color: white;
+  position: absolute;
+  margin-left: 34.1em;
+  margin-top: 4em;
+  z-index: 1;  
 }
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown a:hover {background-color: #f1f1f1}
-
-.show {display:block;}
