--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav ul ul {
 	padding: 0 5px;
 	border-radius: 5px;
 	list-style: none;
-	position: relative;
+	position: absolute;
 	display: inline-table;
 }
 	nav ul:after {
