--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav ul ul {
   	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);
   	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
   	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%);
-    box-shadow: none
+    box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15);
   	padding: 0 5px;
   	border-radius: 5px;
 	  list-style: none;
