--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ nav ul ul {
   	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
   	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%);
     box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15);
-  	padding: 30px;
+  	padding: 10px;
   	border-radius: 5px;
 	  list-style: none;
-	  position: absolute;
+	  position: fixed;
 	  display: inline-table;
 }
 	nav ul:after {
