--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav ul ul {
 
   nav ul {
     background: #efefef;
-  	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);
+  	background: none;
   	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
   	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%);
     box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15);
