--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav ul ul {
   nav ul {
     background: #efefef;
   	background: none;
-  	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%);
+  	background: none;
     box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15);
   	padding: 10px;
   	border-radius: 5px;
