--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav ul ul {
 
   nav ul {
     background: #efefef;
-    box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15);
+    box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15) border-radius: 20%;
   	padding: 10px;
   	border-radius: 40%;
 	  list-style: none;
