--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav ul ul {
 
   nav ul {
     background: #efefef;
-    box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15) border-radius: 20%;
+    box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15) ;
   	padding: 10px;
   	border-radius: 40%;
 	  list-style: none;
@@ -26,8 +26,7 @@ nav ul ul {
 	  display: inline-table;
 }
 	nav ul:after {
-		content: ""; clear: both; display: block;
-		border-radius: 30%;
+		content: ""; clear: both; border-radius: 30%;
 	}
 
   nav ul li {
