--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav ul ul {
 	  display: inline-table;
 }
 	nav ul:after {
-		content: ""; clear: both; border-radius: 30%;
+		content: ""; clear: both;
 	}
 
   nav ul li {
