--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav ul ul {
     background: #efefef;
     box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15) ;
   	padding: 10px;
-  	border-radius: 40%;
+  	border-radius: 5px;
 	  list-style: none;
 	  position: absolute;
 	  display: inline-table;
