--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ text-shadow: 4px 4px 4px #aaa;
 
 nav ul ul {
 	display: none;
-  background: #5f6975; border-radius: 0px; padding: 0;
+  background: #5f6975; border-radius: 10px; padding: 0;
 	position: absolute; top: 100%;
 }
 
@@ -20,7 +20,7 @@ nav ul ul {
     background: #efefef;
     box-shadow: 0px 0px 4.5px rgba(0,0,0,0.15) ;
   	padding: 10px;
-  	border-radius: 5px;
+  	border-radius: 10%;
 	  list-style: none;
 	  position: absolute;
 	  display: inline-table;
