--- a/style.css
+++ b/style.css
@@ -5,3 +5,50 @@ font-family: 'Architects Daughter', serif;
 font-size: 48px;
 text-shadow: 4px 4px 4px #aaa;
 }
+
+.navbar{
+  display: inline-block;
+  position: relative;
+  padding: 0px;
+  margin:0px;
+  text-align: center;
+}
+
+.navbar li{
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+  list-style-type: none;
+  position: relative;
+  float: left;
+  background-color: inherit;
+  width:13.15em;
+}
+
+.dropdown-menu{
+  padding:0px;
+  margin:0px;
+  text-align: center;
+}
+
+.navbar li ul li{
+  border: 1px solid black;
+	background-color: inherit;
+}
+
+
+
+
+a:link, a:visited{
+  text-decoration: none;
+  color:black;
+  font-size: 2.7em;
+  font-family: 'Architects Daughter', serif;
+}
+
+a:hover{
+  text-decoration: none;
+  color:gold;
+  font-size: 2.7em;
+  font-family: 'Architects Daughter', serif;
+}
