--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ text-shadow: 4px 4px 4px #aaa;
 
 .navbar{
   display: inline-block;
-  position: absolute;
+  position: relative;
   padding: 0px;
   margin:0px;
   text-align: center;
