--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ text-shadow: 4px 4px 4px #aaa;
 }
 
 .navbar li ul li{
-  border: none solid black;
+  border: 2px solid black;
 	background-color: inherit;
 }
 
