--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a:link, a:visited{
 
 a:hover{
   text-decoration: none;
-  color: #FF00FF;
+  color: #ADD8E6;
   font-size: 1.7em;
   font-family: 'Architects Daughter', serif;
 }
