--- a/style.css
+++ b/style.css
@@ -52,3 +52,9 @@ a:hover{
   font-size: 1.7em;
   font-family: 'Architects Daughter', serif;
 }
+
+img {
+   padding:1px;
+   border:1px solid #021a40;
+   background-color:#ff0;
+}
